[BE,DOC,TEST] API Get Stats Clothes Most Context
for column clothes_merk, clothes_size, clothes_gender, clothes_made_from, clothes_category, clothes_type
